--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,91 +1,21 @@
-name: Android Play Bundle
-
-on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
-    paths:
-      - "android/**"
-      - "lib/**"
-      - "pubspec.yaml"
-      - ".github/workflows/android-aab.yml"
-
-jobs:
-  build-aab:
-    name: Build Signed AAB
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    env:
-      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-      JAVA_TOOL_OPTIONS: "-Xmx2g -XX:MaxMetaspaceSize=512m"
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Retry: Set up Android SDK + install packages
+        uses: nick-fields/retry@v3
         with:
-          fetch-depth: 0
+          max_attempts: 3
+          retry_on: error
+          timeout_minutes: 10
+          command: |
+            echo "Installing Android SDK packages…"
+            echo "y" | sdkmanager --licenses || true
+            sdkmanager --install \
+              "platform-tools" \
+              "platforms;android-34" \
+              "build-tools;34.0.0" \
+              "cmake;3.22.1" \
+              "ndk;27.0.12077973"
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "17"
-          cache: gradle
-
-      - name: Set up Android SDK + install packages
-        uses: android-actions/setup-android@v3
-        with:
-          accept-licenses: true
-          packages: |
-            platform-tools
-            platforms;android-35
-            build-tools;35.0.0
-            cmake;3.22.1
-            ndk;27.0.12077973
-
-      - name: Decode keystore to android/app/release-keystore.jks
-        shell: bash
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      - name: Verify SDK components
         run: |
-          if [ -z "$KEYSTORE_BASE64" ]; then
-            echo "ERROR: KEYSTORE_BASE64 secret is missing"; exit 1
-          fi
-          mkdir -p android/app
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
-          test -s android/app/release-keystore.jks || { echo "Decoded JKS is empty"; exit 1; }
-
-      - name: Sanity check keystore (does not print secrets)
-        run: |
-          keytool -list -keystore android/app/release-keystore.jks \
-            -alias "$KEY_ALIAS" \
-            -storepass "$KEYSTORE_PASSWORD" \
-            -keypass "$KEY_PASSWORD" >/dev/null \
-          || (echo "Keystore/alias/passwords did not match" && exit 1)
-
-      - name: Flutter version
-        run: flutter --version
-
-      - name: Flutter pub get
-        run: flutter pub get
-
-      - name: Build signed AAB (release)
-        env:
-          CI: "true"
-        run: |
-          printf '%s\n' \
-            'org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8' \
-            'org.gradle.workers.max=1' \
-            'org.gradle.daemon=false' \
-            'android.useAndroidX=true' \
-            'android.enableJetifier=false' \
-            > android/gradle.properties
-          flutter build appbundle --release --no-shrink --verbose
-
-      - name: Upload AAB artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release-aab
-          path: build/app/outputs/bundle/release/app-release.aab
+          echo "ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT:-/usr/local/lib/android/sdk}"
+          ls -la /usr/local/lib/android/sdk || true
+          /usr/local/lib/android/sdk/cmdline-tools/*/bin/sdkmanager --list | head -n 200 || true
