--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,30 +1,84 @@
-      - name: Install SDK packages (per-package + retry)
+name: Android Play Bundle
+
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+    paths:
+      - "android/**"
+      - "lib/**"
+      - "pubspec.yaml"
+      - ".github/workflows/android-aab.yml"
+
+jobs:
+  build-aab:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "17"
+          cache: gradle
+
+      # ✅ Correct multi-line package list (no extra quotes!)
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          packages: |
+            platform-tools
+            platforms;android-34
+            build-tools;34.0.0
+            cmake;3.22.1
+            ndk;27.0.12077973
+
+      # Optional: quick sanity checks
+      - name: Show SDK tools
         run: |
-          set -e
-          PKGS=(
-            "platform-tools"
-            "platforms;android-34"
-            "build-tools;34.0.0"
-            "cmake;3.22.1"
-            "ndk;27.0.12077973"
-          )
-          echo "y" | sdkmanager --licenses || true
+          sdkmanager --version
+          ls -la $ANDROID_SDK_ROOT
+          ls -la $ANDROID_SDK_ROOT/ndk
 
-          install_pkg () {
-            local p="$1"
-            for i in 1 2 3; do
-              echo "Attempt $i: installing $p"
-              if sdkmanager --install "$p"; then
-                echo "OK: $p"
-                return 0
-              fi
-              echo "Retrying $p in 10s…"
-              sleep 10
-            done
-            echo "FAILED: $p"
-            exit 1
-          }
+          echo y | sdkmanager --licenses >/dev/null || true
 
-          for p in "${PKGS[@]}"; do
-            install_pkg "$p"
-          done
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          cache: true
+
+      - name: Flutter pub get
+        run: flutter pub get
+
+      # Provide keystore via env and write it to disk
+      - name: Decode keystore from secret
+        shell: bash
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: |
+          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
+          ls -l android/app/release-keystore.jks
+
+      - name: Build AAB (release, signed)
+        working-directory: android
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          ./gradlew --no-daemon \
+            -Dorg.gradle.jvmargs="-Xmx2g -XX:MaxMetaspaceSize=512m" \
+            bundleRelease
+
+      - name: Upload AAB
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-aab
+          path: android/app/build/outputs/bundle/release/app-release.aab
