--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,4 +1,4 @@
-name: Android Play Bundle (minimal)
+name: Android Play Bundle
 
 on:
   workflow_dispatch:
@@ -12,14 +12,13 @@ on:
 
 jobs:
   build-aab:
+    name: Build Signed AAB
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 45
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -28,87 +27,41 @@ jobs:
           java-version: "17"
           cache: gradle
 
-- name: Set up Android SDK
-  uses: android-actions/setup-android@v3
-  with:
-    packages: |
-      platform-tools
-      platforms;android-34
-      build-tools;34.0.0
-      cmake;3.22.1
-      ndk;27.0.12077973
-
-- name: Accept licenses
-  run: yes | sdkmanager --licenses
-
-      - name: Set up Flutter
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
-          cache: true
+          flutter-version: "3.24.3"
 
-      - name: flutter pub get
-        run: flutter pub get
-
-      - name: Check required secrets present
+      - name: Install Android packages (manual)
+        env:
+          ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
         run: |
-          test -n "${{ secrets.KEYSTORE_BASE64 }}" || (echo "Missing KEYSTORE_BASE64" && exit 1)
-          test -n "${{ secrets.KEYSTORE_PASSWORD }}" || (echo "Missing KEYSTORE_PASSWORD" && exit 1)
-          test -n "${{ secrets.KEY_ALIAS }}" || (echo "Missing KEY_ALIAS" && exit 1)
-          test -n "${{ secrets.KEY_PASSWORD }}" || (echo "Missing KEY_PASSWORD" && exit 1)
-          echo "All required secrets are present."
+          set -e
+          yes | "${ANDROID_SDK_ROOT}/cmdline-tools/16.0/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" "cmdline-tools;latest" || true
+          SDKMGR="${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager"
+          yes | "$SDKMGR" --sdk_root="${ANDROID_SDK_ROOT}" \
+            "platform-tools" \
+            "platforms;android-34" \
+            "build-tools;34.0.0" \
+            "cmake;3.22.1" \
+            "ndk;27.0.12077973"
 
-      - name: Decode keystore (JKS)
+      - name: Accept licenses
+        env:
+          ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+        run: yes | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+      - name: Decode Keystore
+        run: echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: |
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
-          ls -l android/app/release-keystore.jks
 
-      - name: Verify keystore opens with passwords + alias
+      - name: Build AAB
+        run: flutter build appbundle --release
         env:
-          STOREPASS: ${{ secrets.KEYSTORE_PASSWORD }}
-          ALIAS: ${{ secrets.KEY_ALIAS }}
-        run: |
-          # Check store password (won’t print contents)
-          keytool -list -keystore android/app/release-keystore.jks -storepass "$STOREPASS" >/dev/null || (echo "Keystore password invalid" && exit 1)
-          # Check alias exists
-          keytool -list -keystore android/app/release-keystore.jks -storepass "$STOREPASS" -alias "$ALIAS" >/dev/null || (echo "Alias '$ALIAS' not found in keystore" && exit 1)
-          echo "Keystore + alias look good."
-
-      - name: Write key.properties from secrets
-        env:
-          STOREPASS: ${{ secrets.KEYSTORE_PASSWORD }}
-          ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEYPASS: ${{ secrets.KEY_PASSWORD }}
-        run: |
-          cat > android/app/key.properties <<EOF
-          storeFile=release-keystore.jks
-          storePassword=${STOREPASS}
-          keyAlias=${ALIAS}
-          keyPassword=${KEYPASS}
-          EOF
-          echo "key.properties written."
-
-      - name: Build AAB (release, signed)
-        env:
-          _JAVA_OPTIONS: "-Xmx2g -XX:MaxMetaspaceSize=512m"
-        run: |
-          flutter pub get
-          flutter build appbundle --release --no-shrink
-
-      - name: Upload AAB
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release-aab
-          path: build/app/outputs/bundle/release/app-release.aab
-
-      # Build the signed AAB via Flutter (uses your key.properties/signingConfigs)
-      - name: Build AAB (release, signed)
-        env:
-          _JAVA_OPTIONS: "-Xmx2g -XX:MaxMetaspaceSize=512m"
-        run: |
-          flutter build appbundle --release --no-shrink
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
