--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -12,18 +12,14 @@ on:
 
 jobs:
   build-aab:
-    name: Build Signed AAB
     runs-on: ubuntu-latest
-    timeout-minutes: 50
-
-    env:
-      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-      ANDROID_HOME: ${{ github.workspace }}/android-sdk
-      JAVA_HOME_17_X64: /usr/lib/jvm/temurin-17-jdk-amd64
+    timeout-minutes: 60
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -32,53 +28,92 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      - name: Install Flutter
+      # Optional: flutter install via subosito (keeps things simple)
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.24.3"
+          channel: stable
 
-      # Manual Android SDK bootstrap (no third-party setup-android action)
-      - name: Install Android cmdline-tools
+      # Minimal Android SDK bootstrap (cmdline-tools latest) to a local folder
+      - name: Prepare local Android SDK (cmdline-tools)
+        shell: bash
         run: |
           set -euxo pipefail
-          mkdir -p "$ANDROID_SDK_ROOT"
-          cd "$ANDROID_SDK_ROOT"
-          curl -L -o cmdtools.zip https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          unzip -q cmdtools.zip
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-          # After unzip, folder is usually "cmdline-tools"
-          mv cmdline-tools/* "$ANDROID_SDK_ROOT/cmdline-tools/latest/" || true
-          rm -f cmdtools.zip
+          SDK_ROOT="$GITHUB_WORKSPACE/android-sdk"
+          mkdir -p "$SDK_ROOT"
+          # Grab latest commandline-tools (mirrored via Google’s public link)
+          curl -L -o /tmp/cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          mkdir -p "$SDK_ROOT/cmdline-tools"
+          unzip -q /tmp/cmdline-tools.zip -d "$SDK_ROOT/cmdline-tools"
+          mv "$SDK_ROOT/cmdline-tools/cmdline-tools" "$SDK_ROOT/cmdline-tools/latest"
+          echo "ANDROID_SDK_ROOT=$SDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_HOME=$SDK_ROOT" >> $GITHUB_ENV
+          echo "$SDK_ROOT/platform-tools" >> $GITHUB_PATH
+          echo "$SDK_ROOT/emulator" >> $GITHUB_PATH
+          echo "$SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
 
-      - name: Install SDK/NDK packages
+      - name: Install Android SDK packages (non-interactive)
+        shell: bash
         run: |
           set -euxo pipefail
-          SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          yes | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses
-          yes | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" \
+          SDK_ROOT="$ANDROID_SDK_ROOT"
+          SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
+          # Install all packages as separate args; pipe yes correctly
+          yes | "$SDKMGR" --sdk_root="$SDK_ROOT" \
             "platform-tools" \
             "platforms;android-34" \
             "build-tools;34.0.0" \
             "cmake;3.22.1" \
             "ndk;27.0.12077973"
+          # Accept licenses (ignore broken pipe exit)
+          yes | "$SDKMGR" --sdk_root="$SDK_ROOT" --licenses >/dev/null || true
+
+      - name: Restore keystore from secrets
+        shell: bash
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: |
+          set -euxo pipefail
+          test -n "$KEYSTORE_BASE64"
+          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
+          ls -l android/app/release-keystore.jks
+
+      - name: Create android/key.properties from secrets
+        shell: bash
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+        run: |
+          set -euxo pipefail
+          test -n "$KEYSTORE_PASSWORD"
+          test -n "$KEY_PASSWORD"
+          test -n "$KEY_ALIAS"
+          cat > android/key.properties <<EOF
+          storePassword=$KEYSTORE_PASSWORD
+          keyPassword=$KEY_PASSWORD
+          keyAlias=$KEY_ALIAS
+          storeFile=release-keystore.jks
+          EOF
+          sed -n '1,10p' android/key.properties
 
       - name: Flutter pub get
         run: flutter pub get
 
-      - name: Decode keystore
-        run: echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
+      - name: Build AAB (release)
         env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-
-      - name: Build signed AAB
-        run: flutter build appbundle --release
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
+          JAVA_TOOL_OPTIONS: "-Xmx2g"
+          _JAVA_OPTIONS: "-Xmx2g"
+          ORG_GRADLE_PROJECT_androidNdkVersion: "27.0.12077973"
+        run: |
+          # Use extra memory headroom and disable shrinkers for stability
+          flutter build appbundle --release --no-shrink --no-tree-shake-icons
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
           path: build/app/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
