--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -34,20 +34,19 @@ jobs:
         with:
           channel: stable
 
-      # Minimal Android SDK bootstrap (cmdline-tools latest) to a local folder
       - name: Prepare local Android SDK (cmdline-tools)
         shell: bash
         run: |
           set -euxo pipefail
           SDK_ROOT="$GITHUB_WORKSPACE/android-sdk"
           mkdir -p "$SDK_ROOT"
-          # Grab latest commandline-tools (mirrored via Google’s public link)
           curl -L -o /tmp/cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           mkdir -p "$SDK_ROOT/cmdline-tools"
           unzip -q /tmp/cmdline-tools.zip -d "$SDK_ROOT/cmdline-tools"
           mv "$SDK_ROOT/cmdline-tools/cmdline-tools" "$SDK_ROOT/cmdline-tools/latest"
           echo "ANDROID_SDK_ROOT=$SDK_ROOT" >> $GITHUB_ENV
           echo "ANDROID_HOME=$SDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_SDK_HOME=$SDK_ROOT" >> $GITHUB_ENV
           echo "$SDK_ROOT/platform-tools" >> $GITHUB_PATH
           echo "$SDK_ROOT/emulator" >> $GITHUB_PATH
           echo "$SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
@@ -58,15 +57,43 @@ jobs:
           set -euxo pipefail
           SDK_ROOT="$ANDROID_SDK_ROOT"
           SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          # Install all packages as separate args; pipe yes correctly
-          yes | "$SDKMGR" --sdk_root="$SDK_ROOT" \
+          # Install each as a separate argument (prevents mis-parsing)
+          "$SDKMGR" --sdk_root="$SDK_ROOT" \
             "platform-tools" \
             "platforms;android-34" \
             "build-tools;34.0.0" \
             "cmake;3.22.1" \
             "ndk;27.0.12077973"
-          # Accept licenses (ignore broken pipe exit)
-          yes | "$SDKMGR" --sdk_root="$SDK_ROOT" --licenses >/dev/null || true
+
+      - name: Accept SDK licenses (force non-interactive with retries)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          SDK_ROOT="$ANDROID_SDK_ROOT"
+          SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
+
+          # Print many 'y' answers (some environments ignore simple `yes |`)
+          say_yes() { python - <<'PY'
+import sys
+for _ in range(200):
+    sys.stdout.write("y\n")
+PY
+          }
+
+          # Try up to 3 times in case Google’s feed briefly fails
+          for i in 1 2 3; do
+            set +e
+            say_yes | "$SDKMGR" --sdk_root="$SDK_ROOT" --licenses
+            CODE=$?
+            set -e
+            if [ $CODE -eq 0 ]; then
+              echo "All licenses accepted."
+              break
+            else
+              echo "License acceptance attempt $i failed (exit $CODE); retrying..."
+              sleep 3
+            fi
+          done
 
       - name: Restore keystore from secrets
         shell: bash
