--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -15,11 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
+    env:
+      # Flutter builds can be memory-hungry; these caps keep Gradle stable.
+      JAVA_TOOL_OPTIONS: "-Xmx2048m -XX:MaxMetaspaceSize=512m"
+      ORG_GRADLE_PROJECT_android_useAndroidX: "true"
+      ORG_GRADLE_PROJECT_android_enableJetifier: "false"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -28,12 +32,13 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      # Optional: flutter install via subosito (keeps things simple)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          cache: true
 
+      # === Single, local Android SDK (no android-actions/setup-android) ===
       - name: Prepare local Android SDK (cmdline-tools)
         shell: bash
         run: |
@@ -57,7 +62,6 @@ jobs:
           set -euxo pipefail
           SDK_ROOT="$ANDROID_SDK_ROOT"
           SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          # Install each as a separate argument (prevents mis-parsing)
           "$SDKMGR" --sdk_root="$SDK_ROOT" \
             "platform-tools" \
             "platforms;android-34" \
@@ -65,22 +69,18 @@ jobs:
             "cmake;3.22.1" \
             "ndk;27.0.12077973"
 
-      - name: Accept SDK licenses (force non-interactive with retries)
+      - name: Accept SDK licenses (with retries)
         shell: bash
         run: |
           set -euxo pipefail
           SDK_ROOT="$ANDROID_SDK_ROOT"
           SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-
-          # Print many 'y' answers (some environments ignore simple `yes |`)
           say_yes() { python - <<'PY'
 import sys
 for _ in range(200):
     sys.stdout.write("y\n")
 PY
           }
-
-          # Try up to 3 times in case Google’s feed briefly fails
           for i in 1 2 3; do
             set +e
             say_yes | "$SDKMGR" --sdk_root="$SDK_ROOT" --licenses
@@ -95,7 +95,8 @@ PY
             fi
           done
 
-      - name: Restore keystore from secrets
+      # === Keystore from secrets ===
+      - name: Write release keystore
         shell: bash
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
@@ -105,42 +106,22 @@ PY
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
 
-      - name: Create android/key.properties from secrets
-        shell: bash
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-        run: |
-          set -euxo pipefail
-          test -n "$KEYSTORE_PASSWORD"
-          test -n "$KEY_PASSWORD"
-          test -n "$KEY_ALIAS"
-          cat > android/key.properties <<EOF
-          storePassword=$KEYSTORE_PASSWORD
-          keyPassword=$KEY_PASSWORD
-          keyAlias=$KEY_ALIAS
-          storeFile=release-keystore.jks
-          EOF
-          sed -n '1,10p' android/key.properties
-
       - name: Flutter pub get
         run: flutter pub get
 
+      # Build AAB — Gradle will read signing from android/app/build.gradle (env vars)
       - name: Build AAB (release)
+        shell: bash
         env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
-          JAVA_TOOL_OPTIONS: "-Xmx2g"
-          _JAVA_OPTIONS: "-Xmx2g"
-          ORG_GRADLE_PROJECT_androidNdkVersion: "27.0.12077973"
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          # Use extra memory headroom and disable shrinkers for stability
-          flutter build appbundle --release --no-shrink --no-tree-shake-icons
+          set -euxo pipefail
+          flutter build appbundle --release --no-tree-shake-icons
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
           path: build/app/outputs/bundle/release/app-release.aab
-          if-no-files-found: error
