--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -14,16 +14,18 @@ jobs:
   build-aab:
     runs-on: ubuntu-latest
     timeout-minutes: 60
-
     env:
-      # Flutter builds can be memory-hungry; these caps keep Gradle stable.
-      JAVA_TOOL_OPTIONS: "-Xmx2048m -XX:MaxMetaspaceSize=512m"
-      ORG_GRADLE_PROJECT_android_useAndroidX: "true"
-      ORG_GRADLE_PROJECT_android_enableJetifier: "false"
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+      KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -38,86 +40,61 @@ jobs:
           channel: stable
           cache: true
 
-      # === Single, local Android SDK (no android-actions/setup-android) ===
-      - name: Prepare local Android SDK (cmdline-tools)
+      # --- Install Android SDK manually & accept licenses ---
+      - name: Install Android SDK (manual)
         shell: bash
         run: |
           set -euxo pipefail
-          SDK_ROOT="$GITHUB_WORKSPACE/android-sdk"
-          mkdir -p "$SDK_ROOT"
-          curl -L -o /tmp/cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          mkdir -p "$SDK_ROOT/cmdline-tools"
-          unzip -q /tmp/cmdline-tools.zip -d "$SDK_ROOT/cmdline-tools"
-          mv "$SDK_ROOT/cmdline-tools/cmdline-tools" "$SDK_ROOT/cmdline-tools/latest"
-          echo "ANDROID_SDK_ROOT=$SDK_ROOT" >> $GITHUB_ENV
-          echo "ANDROID_HOME=$SDK_ROOT" >> $GITHUB_ENV
-          echo "ANDROID_SDK_HOME=$SDK_ROOT" >> $GITHUB_ENV
-          echo "$SDK_ROOT/platform-tools" >> $GITHUB_PATH
-          echo "$SDK_ROOT/emulator" >> $GITHUB_PATH
-          echo "$SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          mkdir -p "${ANDROID_SDK_ROOT}/cmdline-tools"
+          cd "${ANDROID_SDK_ROOT}/cmdline-tools"
+          curl -L -o cmdline-tools.zip "https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
+          mkdir -p latest
+          unzip -q cmdline-tools.zip -d latest
+          rm cmdline-tools.zip
+          echo "SDK manager is at: ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager"
 
-      - name: Install Android SDK packages (non-interactive)
+      - name: Accept licenses
         shell: bash
         run: |
           set -euxo pipefail
-          SDK_ROOT="$ANDROID_SDK_ROOT"
-          SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          "$SDKMGR" --sdk_root="$SDK_ROOT" \
+          yes | "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" --licenses || true
+
+      - name: Install required SDK packages
+        shell: bash
+        run: |
+          set -euxo pipefail
+          "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" \
             "platform-tools" \
-            "platforms;android-34" \
+            "platforms;android-35" \
             "build-tools;34.0.0" \
             "cmake;3.22.1" \
             "ndk;27.0.12077973"
 
-      - name: Accept SDK licenses (with retries)
+      # --- Recreate keystore from secrets ---
+      - name: Restore keystore from secrets
+        if: env.KEYSTORE_BASE64 != ''
         shell: bash
         run: |
           set -euxo pipefail
-          SDK_ROOT="$ANDROID_SDK_ROOT"
-          SDKMGR="$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          say_yes() { python - <<'PY'
-import sys
-for _ in range(200):
-    sys.stdout.write("y\n")
-PY
-          }
-          for i in 1 2 3; do
-            set +e
-            say_yes | "$SDKMGR" --sdk_root="$SDK_ROOT" --licenses
-            CODE=$?
-            set -e
-            if [ $CODE -eq 0 ]; then
-              echo "All licenses accepted."
-              break
-            else
-              echo "License acceptance attempt $i failed (exit $CODE); retrying..."
-              sleep 3
-            fi
-          done
-
-      # === Keystore from secrets ===
-      - name: Write release keystore
-        shell: bash
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: |
-          set -euxo pipefail
-          test -n "$KEYSTORE_BASE64"
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
 
+      # (Optional) sanity check the alias exists
+      - name: Show keystore alias (sanity check)
+        if: env.KEYSTORE_BASE64 != ''
+        shell: bash
+        run: |
+          set -euxo pipefail
+          keytool -list -v -keystore android/app/release-keystore.jks -storepass "$KEYSTORE_PASSWORD" | grep -E "Alias name|Entry type" || true
+
+      # --- Build AAB (release) ---
       - name: Flutter pub get
         run: flutter pub get
 
-      # Build AAB — Gradle will read signing from android/app/build.gradle (env vars)
-      - name: Build AAB (release)
-        shell: bash
+      - name: Build AAB
         env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         run: |
-          set -euxo pipefail
           flutter build appbundle --release --no-tree-shake-icons
 
       - name: Upload AAB artifact
@@ -125,3 +102,4 @@ PY
         with:
           name: app-release-aab
           path: build/app/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
